2004-06-17 00:24  sisoft

	* src/binkp.c, src/mailer.h, src/perl.c, src/protfm.c,
	  src/session.c, stuff/test.pl:

	perl: fix on_session and implement on_recv/end_recv/on_send/end_send hooks.

2004-06-16 10:22  sisoft

	* debian/copyright, src/mailer.h, src/perl.c, src/session.c,
	  stuff/test.pl:

	perl: fix compiling, implement end_session() hook.

2004-06-16 07:42  sisoft

	* Changes, INSTALL, qico.conf.sample, src/binkp.c, src/call.c,
	  src/daemon.c, src/ftn.h, src/mailer.h, src/perl.c, src/session.c,
	  stuff/test.pl:

	some perl-related changes.

2004-06-15 00:29  sisoft

	* Changes, src/flaglex.l, src/session.c:

	fix compile with old flex.
	fix kill files from *.hlo and *.hut, when holdout=yes.

2004-06-13 21:05  sisoft

	* Changes, debian/changelog, debian/examples, debian/inetd.conf,
	  debian/init.d, debian/rules, debian/services, src/freq.c,
	  stuff/Makefile.am, stuff/freebsd/pkg-plist:

	fix freqs: do not include path in outgoing filenames.
	fix debian packages install.
	distrubute stuff/test.pl.

2004-06-12 00:30  sisoft

	* src/daemon.c, src/flagexp.y, src/flaglex.l, src/perl.c,
	  stuff/test.pl:

	partially rewrite lexical config parser and fix possibly fuzzy detections.

2004-06-10 02:25  sisoft

	* cvs_com, src/daemon.c, src/flagexp.y, src/flaglex.l, src/hydra.c,
	  src/hydra.h, src/log.c, src/mailer.h, src/main.c, src/perl.c,
	  src/tools.c, src/tools.h, stuff/test.pl:

	add if-expression flags 'perl[0-9]' - flags, setted from perl script.
	other perl-related changes.

2004-06-08 15:11  sisoft

	* Changes, qico.conf.sample, src/protfm.c, stuff/test.pl:

	fix receiving files from last position after abort, not from begin.

2004-06-07 22:50  sisoft

	* Changes, Makefile.am, README, autogen.sh, configure.in,
	  qico.spec, debian/Makefile.am, debian/changelog, src/Makefile.am,
	  src/binkp.c, src/daemon.c, src/log.c, src/main.c, src/perl.c,
	  src/qconf.x, stuff/test.pl, stuff/freebsd/Makefile:

	change version to 0.55si.