@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-20 02:29";
+char cvsdate[]="2004-06-20 22:47";
